--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaruantreview",
   "version": "1.0.0",
   "description": "This will be a dynamic app for restaurant reviews for DigitalCrafts bootcamp.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
